[package]
name = "multiThreadded-Brute-Force"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"
unic = "0.9.0"
num_cpus = "1.0"
arr_macro = "0.1.3"
tokio = { version = "1", features = ["full"] }